--- a/style.css
+++ b/style.css
@@ -1,21 +1,54 @@
 .main{
-    min-width: 100vh;
+    width:624px;
+   
+    border-radius: 16px;
+    padding: 32px;
+    margin: 16px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: beige;
+    background-color: #f9d39da2;
+    background-image: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%);
+
+
 }
 
 .description{
-    justify-content: center;
-    align-items: center;
+    font-weight: normal;
+    font-family: Georgia, 'Times New Roman', Times, serif   
+}
+
+h2{
+    margin: 0;
+}
+
+h3{
+    margin: 0;
+    margin-bottom: 24px;
+    font-style: italic;
+    color: darkgray;
 }
 
 img{
     width: 100px;
     height: 100px;
+    border-radius: 74px;
+    padding-right: 20px;
 }
 
 body{
-    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    min-height: 100vh;
+    
+  background: #e46f86; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #e46f86, #ffedbc); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #e46f86, #ffedbc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    
+
+}
+
+p{
+    line-height: 22px;
 }
