--- a/style.css
+++ b/style.css
@@ -1,78 +1,87 @@
-.main{
-    min-width: 15vh;
-    max-width: 70vh;
-    border-radius: 16px;
-    padding: 32px;
-    margin: 16px;
-    display: flex;
-    background-color: #eed0a5a2;
-    background-image: linear-gradient(315deg, #eed0a5ad 0%, #ffd8cb 74%);
-    box-shadow: 10px 5px 5px darkgray;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
 
-
-}
-
-.description{
-    font-weight: normal;
-    font-family: Georgia, 'Times New Roman', Times, serif   
-}
-
-.social{
-    font-weight: normal;
-    display: flex;
-    justify-content: space-between;
-}
-
-.social__logo{
-    opacity: 0.5;
-    width: 50px;
-    height: 50px;
-}
-
-.social__logo:hover{
-    opacity: 1;
-}
-h2{
-    margin: 0;
-}
-
-em{
-    
-  color: #cc2b5e; /* fallback for old browsers */
-  color: -webkit-linear-gradient(to left, #cc2b5e, #753a88); /* Chrome 10-25, Safari 5.1-6 */
-  color: linear-gradient(to left, #cc2b5e, #753a88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
-
-h3{
-    margin: 0;
-    margin-bottom: 24px;
-    font-style: italic;
-    color:#494646;
-}
-
-img{
-    width: 100px;
-    height: 100px;
-    border-radius: 74px;
-    padding-right: 20px;
-}
-
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    min-height: 100vh;
-    
   background: #e46f86; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #e46f86, #ffedbc); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #e46f86, #ffedbc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    
-
+  background: -webkit-linear-gradient(
+    to right,
+    #e46f86,
+    #ffedbc
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #e46f86,
+    #ffedbc
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-p{
-    line-height: 22px;
+.main {
+  min-width: 5vh;
+  max-width: 70vh;
+  border-radius: 16px;
+  padding: 32px;
+  margin: 16px;
+  display: flex;
+  background-color: #eed0a5a2;
+  background-image: linear-gradient(315deg, #eed0a5ad 0%, #ffd8cb 74%);
+  box-shadow: 10px 5px 5px darkgray;
+}
+
+.main__photo {
+  height: 100px;
+  border-radius: 74px;
+  padding-right: 20px;
+}
+
+.description {
+  font-weight: normal;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.description__heading {
+  margin: 0;
+}
+
+.description__heading--special {
+  margin: 0;
+  margin-bottom: 24px;
+  font-style: italic;
+  color: #494646;
+}
+
+.description__text {
+  line-height: 22px;
+}
+
+.description__text--special {
+  color: #cc2b5e; /* fallback for old browsers */
+  color: -webkit-linear-gradient(
+    to left,
+    #cc2b5e,
+    #753a88
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  color: linear-gradient(
+    to left,
+    #cc2b5e,
+    #753a88
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.social {
+  font-weight: normal;
+  display: flex;
+  justify-content: space-between;
+}
+
+.social__logo {
+  opacity: 0.5;
+  width: 50px;
+  height: 50px;
+}
+
+.social__logo:hover {
+  opacity: 1;
 }
