--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   min-height: 100vh;
-
   background: #e46f86; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
@@ -19,7 +17,6 @@ body {
 }
 
 .main {
-  min-width: 5vh;
   max-width: 70vh;
   border-radius: 16px;
   padding: 32px;
@@ -31,7 +28,7 @@ body {
 }
 
 .main__photo {
-  height: 100px;
+  height: 120px;
   border-radius: 74px;
   padding-right: 20px;
 }
@@ -73,7 +70,8 @@ body {
 .social {
   font-weight: normal;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .social__logo {
