--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ body {
 
 .description__position {
   margin: 0;
+  font-size: 16px;
+  font-weight: bold;
   margin-bottom: 24px;
   font-style: italic;
   color: #494646;
